style (text-image-panel--full-bleed): IE11 fix
fix for overflowing text in IE11

--- a/sass/directives/03_components/layout_split/_layout_split.scss
+++ b/sass/directives/03_components/layout_split/_layout_split.scss
@@ -58,6 +58,10 @@
     }
 
   }
+
+  &__content__text {
+    width: 100%;
+  }
 }
 
 @mixin text-image-panels-content {
